--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontier-evm-address",
   "version": "0.1.0",
+  "homepage": "https://code0xff.github.io/frontier-evm-address",
   "private": true,
   "dependencies": {
     "@polkadot/util-crypto": "^10.4.1",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
